--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ index_file = site_dir / "index.html"
       <li><a href="http://www.alibabaaberdare.com/">Fries</a></li>
       <li><a href="http://www.alibabaaberdare.com/">Cold Drinks</a></li>
     </ul>
-    <h2>Desi Menu (UK Style) Coming Soon</h2>
+    <h2>Desi Menu Coming Soon</h2>
     <p><b>🍽️ STARTERS - Street Food & Chaats</b><br>
 Pani Puri / Gol Gappa (🥦🌱) – £5.50
 Crispy semolina shells filled with spicy tamarind water, chickpeas, and potatoes.
@@ -287,7 +287,7 @@ Slow-cooked beef chunks in a rich, spiced karahi masala with capsicum and tomato
 
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Phone no. 07742519103</p>
+    <p>Phone no. +447742519103 / 01685874601</p>
     <p>Email: shampishop25@gmail.com</p>
     <p>Location: Unit 3, Llwydcoed road, Aberdare
 Post code: CF44 0TN</p>
